# rmps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
backend/: Dockerfile  create_sample_upload.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_16_1435-644d5b8a4590_reset.py  2025_12_20_1710-36e212802742_reset.py  2025_12_20_1737-d0cef223d1e7_add_category_to_programme_model.py  2025_12_20_1947-0a636d9e6502_add_original_code_to_subject.py  2025_12_21_0118-e0e8601a3da0_add_exam_type_to_subject.py  2025_12_24_2131-51a6caf5f269_update_subjectscore_and_document_model.py  2025_12_24_2337-53efa0babea8_update_document_model.py  2025_12_27_1630-94ceb0f498bf_add_grading_field_to_examsubject_model.py  2025_12_30_1133-eb48a43435ba_add_photo_model.py  2025_12_30_2210-8ecffc640e80_auth_models.py  2025_12_31_0123-407aea75c125_change_use_id_to_uuid.py  2025_12_31_0824-2dfc4acb25ce_add_refresh_token_model.py
backend/app/: config.py  initial_data.py  main.py  models.py
backend/app/core/: cache.py  security.py
backend/app/dependencies/: auth.py
backend/app/routers/: auth.py  batches.py  candidates.py  documents.py  exams.py  insights.py  programmes.py  results.py  schools.py  scores.py  subjects.py  users.py
backend/app/schemas/: auth.py  batch.py  candidate.py  document.py  exam.py  grade.py  insights.py  programme.py  school.py  score.py  subject.py  user.py
backend/app/services/: batch_processor.py  candidate_upload.py  content_extraction.py  id_extraction.py  pdf_generation_job_service.py  pdf_generator.py  reducto_queue.py  result_processing.py  score_sheet_generator.py  score_sheet_pdf_service.py  serialization.py  subject_score_validation.py  subject_upload.py  template_generator.py
backend/app/utils/: score_utils.py  statistics_utils.py
backend/templates/photo_album/: header.html  main.html  main_2_columns.html
backend/templates/score_sheets/: general_header.html  header.html  main_2_columns.html  sample.css
registration-portal/backend/: Dockerfile  README.md  alembic.ini  check_schedules.py  check_schedules_simple.py  pyproject.toml
registration-portal/backend/alembic/: env.py
registration-portal/backend/alembic/versions/: 00ec9f15168b_update_school_model.py  020ec4a481a2_update_examtype_enum.py  059fdfd3d207_add_results_access_pin.py  07bcd6cc6db5_add_tickets_activities.py  14d00b14a8f4_add_examination_series_to_certificate_requests.py  1d174854e379_modify_addres_column.py  2026_01_13_1425_update_registration_type_enum_regular_to_free_tvet.py  253c3e679d56_add_index_number_generation_job_model.py  2d4cb14f71fb_add_original_code_to_subjects.py  2e69eaf6109f_add_candidate_results.py  36b92ca6da04_add_user_id_field_to_.py  46a1da573f2b_add_programme_and_subjects_model.py  475d1203c946_update_examiners_application_model.py  48839b242ed1_add_cert_confirmation_models.py  4d43320db193_add_photo_validation_job_model.py  52de03ff3bed_update_exam_schedule_model.py  6c38864192d4_add_exampricing_model.py  6d538e813189_add_api_keys_and_credit_system.py  745eb6f2d0a3_update_examination_schedule.py  76e7f536fbfb_merge_exam_schedule_and_pricing_heads.py  7710c726e0bb_ticketactivity_models.py  796c30db4172_add_programme_pricing.py  7a1c06fb27a0_examiners_application_models.py  7faf235621e1_update_cert_confirmation_and_request_.py  9b0c1a2d3e4f_add_confirmation_response_fields.py  a1b2c3d4e5f6_add_response_signing_fields.py  a54d56bb1b7c_drop_exmainer_application_models.py  aba8625d46a6_add_response_reference_number_field.py  add_draft_to_registration_status.py  add_is_private_examination_center_to_schools.py  add_pricing_model_preference_to_exam.py  be281c6e6782_update_grading_options.py  d5355974bdcb_initregistration_db.py  db6f7283d80c_add_certificate_request_models.py  dcad8dd0f290_add_registration_pricing_and_payment_.py  e6cf316340ea_update_auth_models.py  ecc45d517eff_add_rbac_permissions.py  f06106ce6729_add_new_fields_to_candidate_model.py  f7g8h9i0j1k2_add_response_revocation_fields.py  ff260e8a59e9_add_registration_type_field_to_pricing_.py  (+1 more)
registration-portal/backend/app/: config.py  initial_data.py  main.py  models.py
registration-portal/backend/app/core/: api_key_generator.py  cache.py  exam_codes.py  permissions.py
registration-portal/backend/app/dependencies/: api_key_auth.py  auth.py  database.py  permissions.py
registration-portal/backend/app/routers/: admin.py  admin_examiner.py  api_keys.py  api_verification.py  auth.py  credits.py  dashboard_verification.py  examiner.py  examiner_recommendation.py  permissions.py  private.py  public.py  school.py
registration-portal/backend/app/schemas/: api_key.py  api_user.py  auth.py  certificate.py  credit.py  examiner.py  invoice.py  pricing.py  programme.py  registration.py  result.py  schedule.py  school.py  subject.py  timetable.py  user.py  verification.py
registration-portal/backend/docs/: CERTIFICATE_SETUP.md
(+1703 files in other folders)
